# search-knowledge

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_search.py  0002_graph_foundation.py
app/: db.py  main.py  models.py  repositories.py
search_knowledge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_graph.py  test_graph_api.py  test_health.py  test_persistence.py  test_search.py
